LPD-21201 - formatSource
