# modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -2847,6 +2847,32 @@ paths:
                         application/json: {}
                         application/xml: {}
             tags: ["Organization"]
+    "/accounts/{accountId}/phones":
+        get:
+            description:
+                Retrieves the account's phone numbers.
+            operationId: getAccountPhonesPage
+            parameters:
+                - in: path
+                  name: accountId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Phone"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/Phone"
+                                type: array
+            tags: ["Phone"]
     "/accounts/{accountId}/postal-addresses":
         get:
             description:
@@ -2900,32 +2926,6 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/PostalAddress"
             tags: ["PostalAddress"]
-    "/accounts/{accountId}/phones":
-        get:
-            description:
-                Retrieves the account's phone numbers.
-            operationId: getAccountPhonesPage
-            parameters:
-                - in: path
-                  name: accountId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/Phone"
-                                type: array
-                        application/xml:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/Phone"
-                                type: array
-            tags: [ "Phone" ]
     "/accounts/{accountId}/user-accounts":
         get:
             # @review
